--- a/css/style.css
+++ b/css/style.css
@@ -2578,13 +2578,16 @@ fieldset {
 .section__input-name:hover,
 .section__input-weight:hover,
 .section__input-old:hover {
-  border: 2px solid #cdcdcd;
+  border: 1px solid #696969;
 }
 
+.section__input-name:focus,
+.section__input-weight:focus,
+.section__input-old:focus,
 .section__input-name:active,
 .section__input-weight:active,
 .section__input-old:active {
-  border: 2px solid black;
+  border: 1px solid black;
 }
 
 .section__article {
@@ -2738,11 +2741,12 @@ input[type="radio"].visually-hidden {
 }
 
 .item__input:hover {
-  border: 2px solid #cdcdcd;
+  border: 1px solid #696969;
 }
 
-.item__input:focus {
-  border: 2px solid black;
+.item__input:focus,
+.item__input:active {
+  border: 1px solid black;
 }
 
 .requisites__article {
@@ -2789,11 +2793,12 @@ input[type="radio"].visually-hidden {
 }
 
 .comments__input:hover {
-  border: 2px solid #cdcdcd;
+  border: 1px solid #696969;
 }
 
-.comments__input:focus {
-  border: 2px solid black;
+.comments__input:focus,
+.comments__input:active {
+  border: 1px solid black;
 }
 
 .additionally__article {
